Fixed blog content image spacing

--- a/app/styles/partials/components/_post.sass
+++ b/app/styles/partials/components/_post.sass
@@ -13,7 +13,9 @@
 
     .content-image
       flex-grow: 2
-
+      display: flex
+      justify-content: center
+      
       img
         width: 300px
         height: 300px
